feat: Defining new API for retrieve info about time-slots to recover (#20)
* feat: Including new API for retrieve info about days to be recovered
* chore: Updated OpenAPI file with new API
* feat: Introducing automatic workflow for infra update on deploy

---------
